@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.kuali.kra</groupId>
-    <artifactId>ggforms4</artifactId>
+    <groupId>org.kuali.kra.s2s</groupId>
+    <artifactId>gg-forms5</artifactId>
     <packaging>jar</packaging>
     <name>KCRA Project. Grants.gov form set 4 schema compiler</name>
     <version>1.0-SNAPSHOT</version>
@@ -21,20 +21,21 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <schemaDirectory>ggforms4</schemaDirectory>
+                    <schemaDirectory>ggforms5</schemaDirectory>
                     <download>false</download>
                     <sourceGenerationDirectory>target/generated/xmlbeans</sourceGenerationDirectory>
                     <verbose>true</verbose>
+                    <argLine>-Xmx1536m -XX:MaxPermSize=512m</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
     <dependencies>
-	<dependency>                    
-		<groupId>org.kuali.kra.s2s</groupId>                    
-		<artifactId>MetaGrantApplication</artifactId>
-		<version>0.9.2-SNAPSHOT</version>                
-	</dependency>
+        <dependency>                    
+        	<groupId>org.kuali.kra.s2s</groupId>                    
+        	<artifactId>gg-system</artifactId>                    
+        	<version>1.0-SNAPSHOT</version>                
+        </dependency>
         <dependency>
             <groupId>xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
